2010-10-28  Erich Ritz  <erichritz@gmail.com>

	* math/math.h (isinf): Fix typo in comment.

2010-11-01  Ulrich Drepper  <drepper@gmail.com>

	* po/da.po: Update from translation team.

2010-10-26  Ulrich Drepper  <drepper@gmail.com>

	* elf/rtld.c (dl_main): Move assertion after the point where rtld map
	is added to the list.

2010-10-20  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
	    Ulrich Drepper  <drepper@gmail.com>

	* elf/dl-object.c (_dl_new_object): Don't append the new object to
	the global list here.  Move code to...
	(_dl_add_to_namespace_list): ...here.  New function.
	* elf/rtld.c (dl_main): Invoke _dl_add_to_namespace_list.
	* sysdeps/generic/ldsodefs.h (_dl_add_to_namespace_list): Declare.
	* elf/dl-load.c (lose): Don't remove the element from the list.
	(_dl_map_object_from_fd): Invoke _dl_add_to_namespace_list.
	(_dl_map_object): Likewise.

2010-10-25  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12159]
	* sysdeps/x86_64/multiarch/strchr.S: Fix propagation of search byte
	into all bytes of SSE register.
	Patch by Richard Li <richardpku@gmail.com>.

2010-10-24  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12140]
	* malloc/malloc.c (_int_free): Fill correct number of bytes when
	perturbing.

2010-10-20  Michael B. Brutman  <brutman@us.ibm.com>

	* sysdeps/powerpc/dl-procinfo.c: Add support for ppca2 platform
	* sysdeps/powerpc/dl-procinfo.h: Add support for ppca2 platform
	* sysdeps/powerpc/powerpc32/a2/memcpy.S: New file.
	* sysdeps/powerpc/powerpc64/a2/memcpy.S: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/a2/Implies: New
	submachine.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/a2/Implies: Likewise.

2010-10-22  Andreas Schwab  <schwab@redhat.com>

	* include/dlfcn.h (__RTLD_SECURE): Define.
	* elf/dl-load.c (_dl_map_object): Remove preloaded parameter.  Use
	mode & __RTLD_SECURE instead.
	(open_path): Rename preloaded parameter to secure.
	* sysdeps/generic/ldsodefs.h (_dl_map_object): Adjust declaration.