@@ -1,4 +1,4 @@
-GNU C Library NEWS -- history of user-visible changes.  2010-10-24
+GNU C Library NEWS -- history of user-visible changes.  2010-11-2
 Copyright (C) 1992-2009, 2010 Free Software Foundation, Inc.
 See the end for copying conditions.
 
@@ -11,7 +11,7 @@ Version 2.13
 
   3268, 7066, 10851, 11611, 11640, 11701, 11840, 11856, 11883, 11903, 11904,
   11968, 11979, 12005, 12037, 12067, 12077, 12078, 12092, 12093, 12107, 12108,
-  12113, 12140, 12159
+  12113, 12140, 12159, 12167
 
 * New Linux interfaces: prlimit, prlimit64, fanotify_init, fanotify_mark
 
